2004-01-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/invoking.itexi (Invoking lilypond): Document
	that tagline overrides copyright for single page scores. Correct
	the default tagline value.

2004-01-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.texi: Compile fix (thanks Mats).

2004-01-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* buildscripts/lilypond-login.sh: Avoid warning about undefined
	TEXMF if it's previously unset.

2004-01-29  Heikki Junes <hjunes@cc.hut.fi>

	* scm/chord-name.scm (german-markup): bugfix: use SEMI-TONE.

	* input/test/trills.ly: fix the unfolding of lineprall.

	* input/test/figured-bass-alternative.ly: fix accidental.

2004-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.texi: Add note about safe mode.
	
	* input/no-notation/dos-guile.ly: 
	* input/no-notation/dos-ps.ly: 
	* input/no-notation/dos-tex.ly: New file.  These tests still FAIL.
	
	* input/no-notation/safe-include.ly:
	* input/no-notation/safe-guile.ly:
	* input/no-notation/safe-ps.ly: 
	* input/no-notation/safe-tex.ly: New file.

	* scripts/lilypond.py (global_latex_preamble): Add \nofiles for
	safe mode Add -s,--safe-mode option.  Use -S,--set for setting
	options now.
	(run_lilypond): When in --safe-mode, pass option to lilypond-bin.
	When in --safe-mode, set environment openout_any=p[aranoid].

	* tex/ltest.tex: 
	* tex/lilyponddefs.tex: Add \nofiles.

	* python/lilylib.py (get_bbox, make_ps_images): Add -dSAFER to gs
	options.

	* mf/GNUmakefile (FETA_LIST_FILES): Install feta*list.lys too.
	This allows building the user manual using a binary installation
	and a matching unpacked source tree.

	* scm/lily.scm (safe-module): New variable. 

	* lily/includable-lexer.cc (new_input): Fix error messages.

	* lily/parse-scm.cc (internal_ly_parse_scm): Add parameter SAFE.
	If SAFE, evaluate in safe-module.  Change callers.

	* lily/main.cc (Long_option_init): Reinstate safe-mode.
