@@ -12,7 +12,7 @@ Thomas Willhalm
 Werner Lemberg
 Nicolas Sceaux 
 Nick Busigin
-
+Matthias Kilian
 
 Release 2.0
 ***********
