@@ -1,3 +1,12 @@
+2004-01-31  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/note-collision.cc (check_meshing_chords): Do not remove
+	dots (from down head) when merging similar heads (thanks Matthias
+	Kilian).  Simplify merge_possible tests and other cleanups
+
+	* input/regression/collision-merge-differently-dotted.ly: Add test
+	for disappearing dots on similar heads for both voices.
+
 2004-01-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* Documentation/user/invoking.itexi (Invoking lilypond): Document
